...
                            <navigationBar contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WAI-3Z-xeg">
                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="44" id="xra-Yh-4C5"/>
                                </constraints>
                                <items>
                                    <navigationItem title="Books" id="Tls-f3-WSb"/>
                                </items>
                            </navigationBar>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="60" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="9pD-uk-dUh">
                                <rect key="frame" x="0.0" y="64" width="375" height="451"/>
                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <prototypes>
...
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                        <textInputTraits key="textInputTraits"/>
                                                    </textField>
                                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" translatesAutoresizingMaskIntoConstraints="NO" id="fAz-hE-hun">
                                                        <rect key="frame" x="91" y="0.0" width="91" height="29"/>
                                                        <segments>
                                                            <segment title="Asc"/>
                                                            <segment title="Desc"/>
                                                        </segments>
                                                        <connections>
                                                            <action selector="actionOrder:" destination="BYZ-38-t0r" eventType="valueChanged" id="3nu-av-0bK"/>
                                                        </connections>
                                                    </segmentedControl>
                                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GUT-p5-als">
                                                        <rect key="frame" x="182" y="0.0" width="91" height="28"/>
                                                        <state key="normal" image="erase"/>
                                                        <connections>
                                                            <action selector="actionCleanOption:" destination="BYZ-38-t0r" eventType="touchUpInside" id="8TR-av-8ps"/>
                                                        </connections>
                                                    </button>
                                                </subviews>
                                            </stackView>
...
